# guardianD

./: .gitignore  CLAUDE.md  INSTALL_NOTES.md  MANIFEST.in  NEED_TO_FIX.md  README.md  pyproject.toml  setup.cfg
config/: guardian.env.example  guardian.example.yaml
grafana/: dashboard.json
guardian/: main.py
guardian/alerter/: ai.py  base.py  email_alerter.py  explain.py  router.py  slack.py  telegram.py  webhook.py
guardian/collector/: app_health.py  base.py  cpu.py  disk.py  ec2.py  memory.py  network.py  process.py  system_events.py
guardian/config/: loader.py  schema.py
guardian/exposition/: prometheus.py  rest_api.py
guardian/intelligence/: anomaly.py  baseline.py  fingerprint.py  forecast.py  stub.py  velocity.py
guardian/storage/: log_writer.py  sqlite_store.py
guardian/utils/: logger.py  platform.py  retry.py
guardianctl/: cli.py
scripts/: install.sh  uninstall.sh
systemd/: guardian.service
tests/: conftest.py  test_alerter_ai.py  test_alerter_email.py  test_alerter_explain.py  test_alerter_router.py  test_alerter_router_extended.py  test_alerter_slack.py  test_alerter_telegram.py  test_alerter_webhook.py  test_cli.py  test_collector_app_health.py  test_collector_cpu.py  test_collector_disk.py  test_collector_ec2.py  test_collector_memory.py  test_collector_network.py  test_collector_process.py  test_collector_system_events.py  test_config_loader.py  test_exposition_prometheus.py  test_exposition_rest_api.py  test_intelligence_anomaly.py  test_intelligence_baseline.py  test_intelligence_fingerprint.py  test_intelligence_forecast.py  test_intelligence_velocity.py  test_storage_log_writer.py  test_storage_sqlite.py  test_utils_platform.py  test_utils_retry.py
