[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

# NOTE: All project metadata (name, version, dependencies, optional-dependencies,
# console scripts, package discovery) lives in setup.cfg, NOT here.
#
# This is deliberate. Stock Ubuntu/Debian ships setuptools <61, which cannot read
# the PEP 621 [project] table, and pip build isolation on those hosts does not
# reliably hand the build step a newer setuptools. A complete declarative setup.cfg
# is honored by setuptools >=30.3, so `pip install .` works on those stock toolchains.
# Keeping a [project] table here as well would create a split-brain / conflict, so
# this file intentionally holds only the build-system and tooling config.

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
