[metadata]
name = guardiand
version = 0.1.0
description = Production-grade EC2 instance observability daemon
long_description = file: README.md
long_description_content_type = text/markdown
author = Mobasshir Bhuiya Shagor
license = MIT
license_files = LICENSE

[options]
python_requires = >=3.9
packages = find:
install_requires =
    psutil>=5.9.0
    requests>=2.28.0
    PyYAML>=6.0
    click>=8.1.0
    rich>=13.0.0
    tabulate>=0.9.0
    python-dateutil>=2.8.0

[options.packages.find]
include =
    guardian*
    guardianctl*

[options.extras_require]
intelligence =
    numpy>=1.24.0
prometheus =
    prometheus-client>=0.17.0
full =
    numpy>=1.24.0
    prometheus-client>=0.17.0
dev =
    pytest>=7.0
    pytest-cov>=4.0
    pytest-mock>=3.10
    black>=23.0
    ruff>=0.1.0
    mypy>=1.0
    numpy>=1.24.0
    prometheus-client>=0.17.0

[options.entry_points]
console_scripts =
    guardiand = guardian.main:cli_entry
    guardianctl = guardianctl.cli:cli
